finalized the project, just need a bit of work

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,8 +1,57 @@
 {
-    "get_startd":"Get Started",
-    "sign_in": "Sign In",
-    "email_address": "Email Adress" ,
+    "online_health_check": "Online health check",
+    "book_the_best_doctor": "Book The Best Doctor In Various Specialties",
+    "next": "Next",
+    "skip": "skip",
+    "near_to_you": "Near To You",
+    "schedule_you_visit": "Schedule Your Visit At Any Time That Suits You",
+    "get_started": "Get Started",
+    "welcome": "Welcome",
+    "login": "Log In",
+    "signup": "Sign Up",
+    "name": "Name",
+    "email": "Email",
     "password": "Password",
-    "dont_you_have_an_account": "Don't have an Account? ",
-    "create_one": "Create One" 
+    "confirm_password": "Confirm Password",
+    "or": "Or",
+    "do_not_have_account": "Don't Have An Account?",
+    "have_account": "Have An Account?",
+    "forgot_password": "Forgot Password?",
+    "enter_email_address": "Enter Email Address",
+    "send_code": "Send Code",
+    "verification": "Verification",
+    "enter_verification_code": "Enter Verification Code",
+    "did_not_receive_code": "If You Didn't Receive A Code,",
+    "resend": "Resend",
+    "enter_code": "Enter Code",
+    "enter_new_password": "Enter New Password",
+    "continue": "Continue",
+    "hello": "Hello",
+    "how_are_you_feeling_today": "How Are You Feeling Today?",
+    "what_looking_for": "What Are You Looking For?",
+    "cardiologist": "Cardiologist",
+    "psychologist": "Psychologist",
+    "dentist": "Dentist",
+    "do_not_forget": "Don't Forget",
+    "dr_assaed_hanash": "Dr. Assaed Hanash",
+    "recent_visit": "My Recent Visit",
+    "dr_nour_srour": "Dr. Nour Srour",
+    "dr_assaed": "Dr. Assaed",
+    "popular_doctor": "Popular Doctor",
+    "dr_amani_albij": "Dr. Amani Albij",
+    "settings": "Settings",
+    "dark_mode": "Dark Mode",
+    "about_us": "About Us",
+    "logout": "Log Out",
+    "edit_name": "Edit Name",
+    "date_of_birth": "Date Of Birth",
+    "male": "Male",
+    "female": "Female",
+    "edit_email": "Edit Email",
+    "language": "Change Language",
+    "save": "Save",
+    "logged_in_successfully!" : "Logged In Successfully!",
+    "please_fill_all_fields" : "Please fill all fields",
+    "signed_upp_successfully" : "Signed up Successfully!",
+    "phone_number" : "Phone Number"
 }
