--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -1,8 +1,57 @@
 {
-    "get_startd":"هيا نبدأ",
-    "sign_in": "تسجيل الدخول",
-    "email_address": "البريد الالكتروني" ,
+    "online_health_check": "فحص الصحة عبر الإنترنت",
+    "book_the_best_doctor": "احجز أفضل طبيب في مختلف التخصصات",
+    "next": "التالي",
+    "skip": "تخطي",
+    "near_to_you": "قريب منك",
+    "schedule_you_visit": "حدد موعد زيارتك في أي وقت يناسبك",
+    "get_started": "ابدأ الآن",
+    "welcome": "مرحباً",
+    "login": "تسجيل الدخول",
+    "signup": "إنشاء حساب",
+    "name": "الاسم",
+    "email": "البريد الإلكتروني",
     "password": "كلمة المرور",
-    "dont_you_have_an_account": "لا تمتلك حساب ؟ ",
-    "create_one": "انشئ حساب"
+    "confirm_password": "تأكيد كلمة المرور",
+    "or": "أو",
+    "do_not_have_account": "ليس لديك حساب؟",
+    "have_account": "لديك حساب؟",
+    "forgot_password": "نسيت كلمة المرور؟",
+    "enter_email_address": "أدخل عنوان البريد الإلكتروني",
+    "send_code": "إرسال الرمز",
+    "verification": "التحقق",
+    "enter_verification_code": "أدخل رمز التحقق",
+    "did_not_receive_code": "إذا لم تستلم رمزاً،",
+    "resend": "إعادة الإرسال",
+    "enter_code": "أدخل الرمز",
+    "enter_new_password": "أدخل كلمة مرور جديدة",
+    "continue": "متابعة",
+    "hello": "مرحباً",
+    "how_are_you_feeling_today": "كيف تشعر اليوم؟",
+    "what_looking_for": "ما الذي تبحث عنه؟",
+    "cardiologist": "طبيب قلب",
+    "psychologist": "طبيب نفسي",
+    "dentist": "طبيب أسنان",
+    "do_not_forget": "لا تنسى",
+    "dr_assaed_hanash": "د. أسعد حناش",
+    "recent_visit": "زيارتي الأخيرة",
+    "dr_nour_srour": "د. نور سرور",
+    "dr_assaed": "د. أسعد",
+    "popular_doctor": "طبيب مشهور",
+    "dr_amani_albij": "د. أماني البيج",
+    "settings": "الإعدادات",
+    "dark_mode": "الوضع الداكن",
+    "about_us": "معلومات عنا",
+    "logout": "تسجيل الخروج",
+    "edit_name": "تعديل الاسم",
+    "date_of_birth": "تاريخ الميلاد",
+    "male": "ذكر",
+    "female": "أنثى",
+    "edit_email": "تعديل البريد الإلكتروني",
+    "language": "تغيير اللغة",
+    "save": "حفظ",
+    "logged_in_successfully!" : "تم تسجيل الدخول بنجاح",
+    "please_fill_all_fields" : "الرجاء ملئ جميع الحقول",
+    "signed_upp_successfully" : "تم التسجيل بنجاح",
+    "phone_number" : "رقم الهاتف"
 }
